<?xml version="1.0"?>
<package format="2">
  <name>global_path_tracking</name>
  <version>0.0.0</version>
  <description>Package for global_path_tracking</description>

  <maintainer email="sere411@gachon.ac.kr">Dahye Kim</maintainer>
  <license>TODO</license>
  <author email="sere411@gachon.ac.kr">Dahye Kim</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
